2011-01-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-util.el (mm-find-buffer-file-coding-system): Don't forget to kill
	the temp buffer.
	* message.el (message-mailer-swallows-blank-line): Use with-temp-buffer.

2011-01-20  Julien Danjou  <julien@danjou.info>

	* mm-decode.el (mm-inline-media-tests): Add text/x-sh.

	* gnus-art.el (gnus-mime-inline-part): Use mm-display-inline rather
	than mm-insert-inline to insert inline part: this respect
	mm-inline-media-tests displayers.

	* mm-view.el (mm-display-shell-script-inline): New function.

	* mm-decode.el (mm-inline-media-tests): Add x-shellscript and x-sh.

	* mm-uu.el (mm-uu-type-alist): Add org block.
	(mm-uu-org-src-code-block-extract): New function.

	* mm-view.el (mm-display-org-inline): New function.

	* mm-decode.el (mm-automatic-display): Add text/org.

	* mailcap.el (mailcap-mime-extensions): Add .org.

2011-01-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-highlight): Remove argument passed to
	gnus-article-add-buttons.

2011-01-19  Tom Rauchenwald  <sehnsucht.nach.unendlichkeit@quantentunnel.de>  (tiny change)

	* spam.el (spam-spamassassin-register-with-sa-learn): Insert a full
	From header with a date and "nobody" as the sender.

2011-01-19  Julien Danjou  <julien@danjou.info>

	* gnus-art.el (gnus-article-add-buttons): Simplify condition.
	(gnus-button-push): Remove gnus-button-entry function, it fails heavily
	if you have the same regexp several times.
	(gnus-button-push): Fix matching when regexp is symbol.

2011-01-15  Glenn Morris  <rgm@gnu.org>

	* message.el (message-mail): A compose-mail function should
	accept headers as strings.

2011-01-13  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-tool-bar-gnome): Tweak tool-bar items.  Add
	:vert-only tags.
	(message-mail): New arg RETURN-ACTION.
	(message-return-action): New var.
	(message-bury): Use it.
	(message-mode): Make it buffer-local.
	(message-send-and-exit): Always call message-bury.
